samples/_failures_safe/1761126853_b8497b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7d7b5156.c: In function ‘read_log_file’:
./samples/SAFE/__tmp_7d7b5156.c:147:9: error: expected declaration or statement at end of input
  147 |         }
      |         ^
./samples/SAFE/__tmp_7d7b5156.c:147:9: error: expected declaration or statement at end of input
